--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -702,10 +702,10 @@
                                                             <rect key="frame" x="1" y="1" width="426" height="89"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="djA-mP-XkM">
+                                                                <textField identifier="created-date-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="djA-mP-XkM">
                                                                     <rect key="frame" x="18" y="63" width="134" height="19"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="1nG-6C-HT5"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="1nG-6C-HT5"/>
                                                                         <constraint firstAttribute="height" constant="19" id="qZE-BG-0XK"/>
                                                                     </constraints>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Feb 5, 2016 16:11" id="Lrv-4M-Haw">
@@ -714,11 +714,11 @@
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
-                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3z0-Af-kgE">
+                                                                <textField identifier="user-name-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3z0-Af-kgE">
                                                                     <rect key="frame" x="18" y="15" width="134" height="19"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="19" id="3Q1-Kq-EE0"/>
-                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="r9Z-lg-t9C"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="r9Z-lg-t9C"/>
                                                                     </constraints>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="TongKuo" id="LZq-K6-LpW">
                                                                         <font key="font" size="12" name="Helvetica-Light"/>
@@ -726,10 +726,10 @@
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
-                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oig-Ue-GI5">
+                                                                <textField identifier="service-name-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oig-Ue-GI5">
                                                                     <rect key="frame" x="18" y="38" width="134" height="23"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="2mt-gn-k8p"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="2mt-gn-k8p"/>
                                                                         <constraint firstAttribute="height" constant="23" id="wQj-A7-j4I"/>
                                                                     </constraints>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Facebook" id="p1N-6z-L8s">
@@ -742,7 +742,7 @@
                                                                     <rect key="frame" x="20" y="1" width="386" height="4"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" id="QvW-BZ-IT4"/>
-                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="383" id="h85-w8-6Mu"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="h85-w8-6Mu"/>
                                                                     </constraints>
                                                                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                                                                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
